# dca

./: .gitignore  Makefile  README.md  app.json  create_message.ipynb  main.py  pyproject.toml  requirements.txt  test.ipynb
.github/: dependabot.yml
dca/: .env_dev  .env_dev.yaml  dotenv_to_yaml.py  main.py  papaj.ipynb  pyproject.toml  quickstart.ipynb  settings.py  zonda.ipynb
dca/clients/: abstract_exchange_client.py  exchange_client.py  exchange_clients.py  zonda.py
dca/clients/xtb/: xtb_client_wrapper.py
dca/dca/: models.py  quickstart.ipynb  settings.py  xAPIConnector.py  xtb_client_wrapper.py
dca/dca/clients/xtb/: x_api_connector.py  xtb_client_wrapper.py
dca/dca/models/: zonda.py
dca/models/: xtb.py  zonda.py
src/: Makefile  main.py  pyproject.toml  requirements.txt
src/dca/: settings.py
src/dca/clients/: abstract_exchange_client.py  zonda.py
src/dca/clients/xtb/: xtb_client_wrapper.py
src/dca/models/: message.py  xtb.py  zonda.py
src/playground/: test.ipynb
terraform/: app.json  function.tf  iam.tf  main.tf  pubsub.tf  schedules.tf  secrets.tf  services.tf  storage.tf  terraform.tfvars  variables.tf  xd.yaml
terraform/bootstrap/: main.tf
terraform/commands/: buy_btc.json  buy_eth.json  buy_ltc.json  buy_snp500.json  buy_usa_bonds.json
