[tool.poetry]
name = "dca"
version = "0.1.0"
description = ""
authors = ["Oskar Korczak <oskar.korczak@neontri.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.15.2"
requests = "^2.28.1"
pydantic = "^1.10.2"
simplejson = "^3.17.6"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
