[tool.poetry]
authors = ["Oskar Korczak <oskar.korczak@neontri.com>"]
description = ""
name = "dca"
version = "0.1.0"

[tool.poetry.dependencies]
pydantic = "^1.10.2"
python = "^3.8"
python-dotenv = "^0.21.0"
requests = "^2.28.1"
simplejson = "^3.17.6"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.2"
pytest = "^5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
