[tool.poetry]
authors = ["Oskar Korczak <oskar.korczak@protonmail.com>"]
description = ""
name = "dca"
version = "0.1.0"

[tool.poetry.dependencies]
PyYAML = "^6.0"
functions-framework = "^3.8.2"
pydantic = "^2.10.4"
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.28.1"
simplejson = "^3.17.6"
types-requests = "^2.32.0"
pydantic-settings = "^2.6.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.2"
pytest = "^8.3"
mypy = "^1.14"
pylint = "^3.3.3"
black = "^24.10.0"
isort = "^5.10.1"
pylint-pydantic = "^0.3.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pylint.MASTER]
disable = [
    "C0114",
    "C0115",
    "C0116",
    "R0801",
    "W0511",
] # missing module, class, function docstring, duplicate-code, fixme
extension-pkg-whitelist = "pydantic"
max-line-length = 240

[tool.isort]
line_length = 99
profile = "black"

[tool.black]
line-length = 99
